styles.css
* {
  color: rgb(0, 0, 0);
  font-family: "Times New Roman", sans-serif;
  font-size: 12px;
  font-weight: 500;
}

/* header */

header {
  background-color: #faa331a0;
  margin: 10px;
  padding: 5px;
  margin-bottom: -10px;
}



nav {
  background-color: #faa331a0;
  border: #744508a0;
  border-style:inset;
  text-align: right;
  padding-right: 30px;
  margin: 5px;
  
}

li {
  display: inline;
  margin: 10px;
}

.navlink {
  font-size: 13px;
  font-weight: bolder;
}

/* main */
main {
  background-color: #faa331a0;
  padding: 0px;
  margin: 10px;
  margin-bottom: -12px;
}

.subtitle {
  color: #110b03e1;
  font-size: larger;
  font-weight: bold;
}

.img-container {
  position: relative;
  text-align: center;
}

.nomecafe {
  background: none;
  color: rgb(203, 203, 203);
  font-family: 'Courier New', Courier, monospace;
  font-size:36px;
  font-weight: bolder;
  position: absolute;
  top: 10%;
  left: 40%;
}

.slogan h5 {
  background-color: none;
  text-align: center;
  font-size: x-large;
  font-weight: 700;
  color: rgb(29, 17, 6);
}

.sobre {
  display: flex;
  padding: 3px;
  margin: -3px;
  padding-bottom: 70px;
}


.sobre .img-container .frame {
  position: relative;
  border: 0px solid #ec9a3653;
  background: #ec9a3653;
  margin-right: -10px;
  padding: 27px 10px;
}

.sobre .img-container img {
  position: relative;
  width:90%;
  padding: 10px;
  background-color: rgba(255, 255, 255, 0.739);
}
.sobre .text {
  width: 100%;
  padding: 5px;
  margin-left: 10px;
  margin-bottom: 0px;
  background-color: #ec9a3653;
}
.sobre .text .subtitle {
  text-align: center;
  font-size: x-large;
  background-color: #f19217d8;
  margin-left: -5px;
  margin-right: -5px;
  margin-top: -5px;
}

.sobre .text p {
  font-size: medium;
}

/* footer */

footer {
  background-color: #f19217d8;
  padding: 10px;
  margin: 10px;
  text-align: center;
}

